Add workflow_dispatch trigger to build workflow
Added workflow_dispatch trigger to the build and test workflow.

--- a/.github/workflows/build_n_test.yml
+++ b/.github/workflows/build_n_test.yml
@@ -1,5 +1,9 @@
 name: Build & Test
-on: [ push ]
+on:
+  push:
+    # případně můžeš omezit třeba jen na main:
+    # branches: [ main ]
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
